ecmascript/parser/tests/test262-error-references/fail/dc547bd1b0f5a594.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/dc547bd1b0f5a594.js:1:4
  |
1 | 0b18
  |    ^

